<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecommendedPlanActivity">


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/lblGym"
              android:text="@string/snacks" android:textColor="@color/colorAccent"
              android:textStyle="bold"
              android:padding="7dp"
              android:visibility="invisible"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
              android:textStyle="bold"
              android:padding="7dp"
              android:text="@string/snacks_e"
              app:layout_constraintTop_toBottomOf="@id/lblGym" android:id="@+id/lblSnacks"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textStyle="bold"
              android:padding="7dp"
              android:visibility="invisible"
              android:text="@string/select_time_breakfast"
              app:layout_constraintTop_toBottomOf="@id/lblSnacks" android:id="@+id/lblBreakFast"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:textColor="@color/colorAccent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
              android:textStyle="bold"
              android:padding="7dp"
              android:text="@string/breakfast"
              app:layout_constraintTop_toBottomOf="@id/lblBreakFast" android:id="@+id/lblTimeForBreakfast"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textStyle="bold"
              android:padding="7dp" android:visibility="invisible"
              android:text="@string/select_time_lunch"
              app:layout_constraintTop_toBottomOf="@id/lblTimeForBreakfast" android:id="@+id/lblLunch"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:textColor="@color/colorAccent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
              android:textStyle="bold"
              android:padding="7dp"
              android:text="@string/lunch"
              app:layout_constraintTop_toBottomOf="@id/lblLunch" android:id="@+id/lblTimeForLunch"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:textStyle="bold"
              android:padding="7dp" android:visibility="invisible"
              android:text="@string/select_time_dinner"
              app:layout_constraintTop_toBottomOf="@id/lblTimeForLunch" android:id="@+id/lblDinner"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:textColor="@color/colorAccent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
              android:textStyle="bold"
              android:padding="7dp"
              android:text="@string/dinner"
              app:layout_constraintTop_toBottomOf="@id/lblDinner" android:id="@+id/lblTimeForDinner"
              android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnSave"
            android:text="@string/save" android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/lblTimeForDinner" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


</android.support.constraint.ConstraintLayout>