<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:showIn="@layout/app_bar_dashboard"
                                            tools:context=".DashboardActivity">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textStyle="bold" android:padding="15dp" android:gravity="center_vertical"
                  android:textColor="@color/colorblack"
                  android:id="@+id/lblCurrentWeight" android:text="@string/your_current_weight"
                  app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textStyle="bold" android:padding="15dp" android:gravity="center_vertical"
                  android:textColor="@color/colorblack" app:layout_constraintTop_toBottomOf="@id/lblCurrentWeight"
                  android:id="@+id/lblYourCurrentStatus" android:text="@string/you_are"
                  android:layout_marginTop="16dp"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textStyle="bold" android:padding="15dp" android:gravity="center_vertical"
                  android:textColor="@color/colorblack" app:layout_constraintTop_toBottomOf="@id/lblYourCurrentStatus"
                  android:id="@+id/lblIdealWeight" android:text="@string/ideal_weight"
                  android:layout_marginTop="16dp"
                  android:layout_marginStart="16dp"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/lblGym"
                  android:text="@string/snacks" android:textColor="@color/colorAccent"
                  android:textStyle="bold" android:visibility="gone"
                  android:padding="7dp" app:layout_constraintTop_toBottomOf="@id/lblIdealWeight"
                  android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
                  android:textStyle="bold"
                  android:padding="7dp"
                  android:text="@string/select_snacks"
                  app:layout_constraintTop_toBottomOf="@id/lblGym" android:id="@+id/lblSnacks"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="7dp" android:visibility="gone"
                  android:text="@string/select_time_breakfast"
                  app:layout_constraintTop_toBottomOf="@id/lblSnacks" android:id="@+id/lblBreakFast"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:textColor="@color/colorAccent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
                  android:textStyle="bold"
                  android:padding="7dp"
                  android:text="@string/select_breakfast"
                  app:layout_constraintTop_toBottomOf="@id/lblBreakFast" android:id="@+id/lblTimeForBreakfast"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="7dp" android:visibility="gone"
                  android:text="@string/select_time_lunch"
                  app:layout_constraintTop_toBottomOf="@id/lblTimeForBreakfast" android:id="@+id/lblLunch"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:textColor="@color/colorAccent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
                  android:textStyle="bold"
                  android:padding="7dp"
                  android:text="@string/select_lunch"
                  app:layout_constraintTop_toBottomOf="@id/lblLunch" android:id="@+id/lblTimeForLunch"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="7dp" android:visibility="gone"
                  android:text="@string/select_time_dinner"
                  app:layout_constraintTop_toBottomOf="@id/lblTimeForLunch" android:id="@+id/lblDinner"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:textColor="@color/colorAccent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:drawableEnd="@drawable/ic_restaurant_menu_black_24dp"
                  android:textStyle="bold"
                  android:padding="7dp"
                  android:text="@string/select_dinner"
                  app:layout_constraintTop_toBottomOf="@id/lblDinner" android:id="@+id/lblTimeForDinner"
                  android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="16dp"/>


        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/nutrition_basics" app:layout_constraintTop_toBottomOf="@id/lblIdealWeight"
                android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:visibility="invisible"
                android:layout_marginEnd="16dp"/>


        <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                                android:id="@+id/lstContent"
                                                android:layout_height="match_parent"
                                                app:layout_constraintTop_toTopOf="parent"
                                                android:layout_marginTop="8dp"
                                                app:layout_constraintStart_toStartOf="parent"
                                                android:layout_marginStart="8dp"
                                                android:visibility="gone"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                android:layout_marginEnd="8dp"
                                                app:layout_constraintBottom_toBottomOf="parent"
                                                android:layout_marginBottom="8dp">

        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>