<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblTitle"
              android:text="@string/dietos" android:textColor="@color/colorblack" android:textStyle="bold"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
              android:padding="15dp"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"/>


    <android.support.design.widget.TextInputLayout android:id="@+id/tilUserName" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   android:layout_marginTop="120dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/txtUserName"
                                                         android:hint="@string/enter_username"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   app:layout_constraintTop_toBottomOf="@id/tilUserName"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tilPassword" android:layout_marginTop="24dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/txtPassword"
                                                         android:inputType="textPassword"
                                                         android:hint="@string/enter_password"/>


    </android.support.design.widget.TextInputLayout>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" android:text="@string/sign_in"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"/>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" android:text="@string/sign_up"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"/>





</android.support.constraint.ConstraintLayout>